# angelos-core

./: .gitignore  LICENSE  README.md  build.gradle.kts  flutter_settings.gradle  gradle.properties  local.properties  settings.gradle.kts
apps/angelos-admin/: build.gradle.kts
apps/logo_messenger/: .gitignore  README.md  build.gradle.kts  pubspec.yaml
apps/logo_messenger-android/: .gitignore  AndroidManifest.xml  build.gradle.kts  local.properties
apps/logo_messenger-ios/: .gitignore  Podfile
apps/logo_messenger-linux/: CMakeLists.txt
apps/net/: build.gradle.kts
apps/rig-client/: build.gradle.kts
apps/rig-server/: build.gradle.kts
buildSrc/src/: angelos-mpp-library.gradle.kts
iops/base/: CMakeLists.txt  build.gradle.kts
iops/base/src/main/c/: base.c  terminal.c
iops/base/src/main/c/bsd/: event.c  file.c  sig.c  sock.c
iops/base/src/main/c/linux/: event.c  sig.c
iops/base/src/main/c/win/: event.c  sock.c
iops/base/src/main/cpp/: client.cpp  net.cpp  server.cpp
iops/base/src/main/public/: base.h  client.h  event.h  file.h  jni.h  net.h  server.h  sig.h  sock.h  terminal.h
iops/base/src/main/public/bsd/: event.h  file.h  sig.h  sock.h
iops/base/src/main/public/linux/: event.h  file.h  sig.h  sock.h
iops/base/src/main/public/win/: event.h  file.h  sock.h
iops/jni-io/: build.gradle.kts
iops/jni-platform/: build.gradle.kts
iops/jni-proc/: build.gradle.kts
jni/: build.gradle.kts
jni/io/: build.gradle.kts
jni/platform/: build.gradle.kts
jnifilesystem/: build.gradle.kts
jniposix/: build.gradle.kts
lib/: build.gradle.kts
(+349 files in other folders)
